@@ -3,7 +3,8 @@
 	- Release: 0.1.25
 
 	- Add DBM::Rekey.
-	- Add Iterator::Step and Iterator::PopFirst.
+	- Add Iterator::Step.
+	- Add DBM::PopFirst and DBM::PushLast.
 	- Compatibility to the C++ library: Tkrzw 1.0.18
 
 2021-10-10  Mikio Hirabayashi  <hirarin@gmail.com>
